--- a/app/profile-edit.html
+++ b/app/profile-edit.html
@@ -57,20 +57,20 @@
 				</div>
 			</div>
 
-			<form class="profile--edit profile--my">
+			<div class="profile--edit profile--my">
 
 				<div class="profile--edit__left profile--my__left">
 					<div class="profile--my__left_img">
-						<img src="img/avatar.jpg" alt="">
+						<img src="img/avatar.jpg" alt="" class="profile--my__left_img--img">
 						<span>Online</span>
-						<div class="">
+						<div class="profile--my__left_img--div">
 							<a href="#" class="btn">Выберите файл</a>
 							<a href="#" class="btn">Загрузить</a>
 						</div>
 					</div>
 				</div>
 
-				<div class="profile--edit__right profile--my__right">
+				<form class="profile--edit__right profile--my__right">
 					<div class="profile--edit__right_col profile--my__right_col">
 						<ul>
 							<li>
@@ -115,13 +115,13 @@
 					<div class="profile--edit__right_col profile--my__right_col">
 						<textarea name="" id="" placeholder="Резюме"></textarea>
 					</div>
-				</div>
+				</form>
 
 				<div class="profile--edit__btn">
 					<a href="#" class="btn">Сохранить</a>
 				</div>
 
-			</form>
+			</div>
 
 		</div>
 	</section>
