apdate 2.1 chat commit

--- a/app/profile-massang.html
+++ b/app/profile-massang.html
@@ -237,7 +237,10 @@
 					</div>
 
 					<form class="profile--massag__chat_form">
-						<textarea placeholder="Ваше сообщения"></textarea>
+						<div class="exercises__btn">
+							<textarea type="text" placeholder="Ваше сообщения"></textarea>
+							<button class="chat--button"></button>
+						</div>
 					</form>
 				</div>
 			</div>
