--- a/app/konstruktor3.1.html
+++ b/app/konstruktor3.1.html
@@ -88,6 +88,18 @@
 								<span>Название упражнения:</span>
 								<span><b>Жим  Арнольда</b></span>
 							</p>
+							<p>
+								<span>Количество подходов:</span>
+								<span><b>0</b></span>
+							</p>
+							<p>
+								<span>Время выполнения:</span>
+								<span><b>0</b></span>
+							</p>
+							<p>
+								<span>Количество повторений:</span>
+								<span><b>0</b></span>
+							</p>
 						</div>
 					</div>
 					<div class="block__content">
