--- a/app/reviews.html
+++ b/app/reviews.html
@@ -68,6 +68,7 @@
 						<img src="img/star.svg" alt="">
 						<img src="img/star.svg" alt="">
 						<img src="img/star.svg" alt="">
+						<time>22.10.2019</time>
 					</div>
 					<div class="konstruktor--step__comment_block reviews__text">
 						<p><b>Оставил отзыв: Иван Иванов Иванович</b></p>
@@ -136,6 +137,15 @@
 					</div>
 				</div>
 
+				<div class="trainers__pagination">
+					<a href="#"></a>
+					<a href="#"></a>
+					<a href="#" class="active"></a>
+					<a href="#"></a>
+					<a href="#"></a>
+					<a href="#"></a>
+				</div>
+				
 			</div>
 
 			<form class="konstruktor--step__form">
@@ -143,12 +153,7 @@
 					<h3>Добавить отзыв</h3>
 				</div>
 				<div id="tabs-two" class="tabs__wrap">
-					<div class="konstruktor--step__form_left">
-						<div class="konstruktor--step__form_img"><img src="img/admin--download.png" alt=""></div>
-						<a href="#" class="btn">Вибрать</a>
-						<a href="#" class="btn">Сохранить</a>
-					</div>
-					<div class="konstruktor--step__form_right">
+					<div class="reviews__form konstruktor--step__form_right">
 						<p>
 							<label for="">Рейтинг</label>
 							<span class="rating-area">
@@ -201,10 +206,6 @@
 						</p>
 						<p>
 							<label for="">Фамилия Имя Отчество</label>
-							<input type="text" placeholder="">
-						</p>
-						<p>
-							<label for="">Мой тренер</label>
 							<input type="text" placeholder="">
 						</p>
 						<p>
